tests/sources/invalid/classes/type_member_access_errors.fire
// Malformed type-level and instance member accesses.
class Foo {
    v: int32;

    fn Foo() {
        this.v = 1;
    }

    static fn bar() -> int32 {
        return 7;
    }
}

// Missing method name after type '.'
a: int32 = Foo.;  //~ ERROR FS-PARSE-0010 @16
//~^ ERROR FS-PARSE-0010 @16

// Missing '(' after type method name
b: int32 = Foo.bar;  //~ ERROR FS-PARSE-0010 @19
//~^ ERROR FS-PARSE-0010 @19

// Missing identifier after instance '.'
f: Foo = Foo();
c: int32 = f.;  //~ ERROR FS-PARSE-0010 @14
//~^ ERROR FS-SEM-0002 @1
